# haskell-fastautils

./: Common.hs  countFasta.hs  countUniqSeqs.hs  countUniqSeqsHash.hs  fastaStat.hs  fastautils.cabal  fastq2fasta.hs  fastq2qual.hs  make.sh  profile.sh
